tests/errors/lifetime/loan/struct_move_rekeys_field_loan.sim

        struct RefBox: Move { p: &mut i64 v: i64 }
        extern fn sink(y: RefBox);
        fn f(x: i64) {
          a: RefBox;
          b: RefBox;
          entry:
            a.p = &mut x;
            a.v = 0;
            b = move a;
            x = 42;
            call sink(move b);
            return
        }
        